--- a/docs/00-intro_and_info.Rmd
+++ b/docs/00-intro_and_info.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Informatica, Statistica, e Fisica Applicata"
-subtitle: "Corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA"
+title: "BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA"
+subtitle: "Corso di laurea in TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA"
 author: "[CorradoLanera](www.CorradoLanera.it)"
 date: "YYYY-MM-DD (last update: `r Sys.Date()`)"
 institute: "[Unità di Biostatistica, Epidemiologia e Salute Pubblicah](https://www.unipd-ubep.it/) --- University of Padova"
@@ -73,14 +73,14 @@ style_share_again(
 ```{r meta, echo=FALSE}
 meta() %>%
   meta_general(
-    description = "Modulo di STATISTICA MEDICA del corso in INFORMATICA, STATISTICA, E FISICA APPLICATA per il corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA",
+    description = "Modulo di STATISTICA MEDICA del corso in BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA per il corso di laurea in TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA",
     generator = "xaringan and remark.js"
   ) %>% 
-  meta_name("github-repo" = "CorradoLanera/ORTOTTICA") %>% 
+  meta_name("github-repo" = "CorradoLanera/diagnostica22") %>% 
   meta_social(
-    title = "Informatica, Statistica, e Fisica Apllicata",
-    url = "https:///ortottica-slide22",
-    image = "https://github.com/CorradoLanera/ortottica/raw/main/docs/img/cover.jpg",
+    title = "BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA",
+    url = "https:///diagnostica22-slide",
+    image = "https://github.com/CorradoLanera/diagnostica22/raw/main/docs/img/cover.jpg",
     og_type = "website",
     og_author = "UBEP",
     twitter_card_type = "summary",
@@ -161,14 +161,14 @@ style_duo_accent(
 <br>
 <br>
 
-# **INFORMATICA, STATISTICA, E FISICA APPLICATA**<br>**.orange[STATISTICA MEDICA]**
+# **BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA**<br>**.orange[STATISTICA MEDICA]**
 
 -- Presentazione e informazioni generali --
 <br>
 <br>
 <br>
 
-C.d.L. **Ortottica e Assistenza Oftalmologica**
+C.d.L. **TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA**
 
 Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
@@ -261,12 +261,12 @@ class: hide-count
 - Modalità: in presenza, con possibilità di seguire da remoto per
  giustificati motivi
 
-- Zoom: [bit.ly/ortottica-zoom22](https://bit.ly/ortottica-zoom22),
+- Zoom: [bit.ly/diagnostica22-zoom](https://bit.ly/diagnostica22-zoom),
   accessibile anche dal link sul Moodle del corso.
 
-- Materiale didattico: Moodle [bit.ly/ortottica-moodle22](https://bit.ly/ortottica-moodle22)
+- Materiale didattico: Moodle [bit.ly/diagnostica22-moodle](https://bit.ly/diagnostica22-moodle)
 
-- Portale accesso slide: [bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
+- Portale accesso slide: [bit.ly/diagnostica22-slide](https://bit.ly/diagnostica22-slide)
 
 - Registrazioni: Disponibili dopo la lezione sul Moodle del corso.
 
@@ -297,29 +297,29 @@ class: hide-count
 
 Cinque lezioni da 4 _ore_ ciascuna (180' effettivi)
 
-- Lezione 1: martedì 18 ottobre 2022 - 14:30-18:30
+- Lezione 1: mercoledì 30 novembre 2022 - 14:30-18:30
   + (60') intro al corso
   + (60') intro a R/RStudio (facoltativo, non oggetto di esame)
   + (60') statistica descrittiva - prerequisiti e definizioni
   
-- Lezione 2: martedì 25 ottobre 2022 - 14:30-18:30
+- Lezione 2: giovedì 1 dicembre 2022 - 08:30-12:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (90') statistica descrittiva - misure
   + (60') statistica descrittiva - rappresentazione
 
-- Lezione 3: martedì 8 novembre 2022 - 14:30-18:30
+- Lezione 3: martedì 6 dicembre 2022 - 14:30-18:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (60') basi di probabilità
   + (30') rischi
   + (60') test di screening e teorema di Bayes
 
-- Lezione 4: martedì 15 novembre 2022 - 14:30-18:30
+- Lezione 4: mercoledì 7 dicembre 2022 - 08:30-12:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (60') modelli/distribuzioni per variabili discrete
   + (60') modelli/distribuzioni per variabili continue
   + (30') trasformazioni e approssimazioni
 
-- Lezione 5: martedì 22 novembre 2022 - 14:30-18:30
+- Lezione 5: mercoledì 14 dicembre 2022 - 14:30-18:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (60') inferenza e stime: intervalli di confidenza
   + (60') inferenza e stime: test d'ipotesi
@@ -378,7 +378,7 @@ loro utilizzo corretto o errato nel produrre i risultati).
 
 
 Un ambiente di lavoro per ciascuno di voi è attivabile e utilizzabile
-gratuitamente su RStudio Cloud collegandosi all'indirizzo: [bit.ly/ortottica-rscloud22](https://bit.ly/ortottica-rscloud22)
+gratuitamente su RStudio Cloud collegandosi all'indirizzo: [bit.ly/diagnostica22-rscloud](https://bit.ly/diagnostica22-rscloud)
 
 
 
@@ -410,7 +410,7 @@ predefinito di esercizi svolti e commentati per l'autoapprendimento
   (disponibile su Moodle e riservato esclusivamente agli studenti del
   corso):
   
-  [bit.ly/ortottica-ricevimento22](https://bit.ly/ortottica-ricevimento22).
+  [bit.ly/diagnostica22-ricevimento](https://bit.ly/diagnostica22-ricevimento).
   
 > La settimana precedente una sessione d'esame non è attivo il ricevimento.
 
@@ -501,7 +501,7 @@ knitr::include_graphics("img/profilo_CL.jpg")
 [`r fontawesome::fa("telegram")`](https://telegram.me/CorradoLanera)
 **@CorradoLanera**
 
-[`r fontawesome::fa("calendar-check")` ](https://bit.ly/ortottica-ricevimento22) [**bit.ly/ortottica-ricevimento22**](https://bit.ly/ortottica-ricevimento22)
+[`r fontawesome::fa("calendar-check")` ](https://bit.ly/diagnostica22-ricevimento) [**bit.ly/diagnostica22-ricevimento**](https://bit.ly/diagnostica22-ricevimento)
 
 
 
@@ -529,7 +529,7 @@ _**Can** one be a .orange[good data analyst] **without** being a .orange[half-go
 <br>
 <br>
 
-Diapositive: [bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
+Diapositive: [bit.ly/diagnostica22-slide](https://bit.ly/diagnostica22-slide)
 
 
 [`r fontawesome::fa("link")`](https://www.unipd-ubep.it/) [**www.unipd-ubep.it**](https://www.unipd-ubep.it/) | 
@@ -539,6 +539,6 @@ Diapositive: [bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
 [`r fontawesome::fa("twitter")`](https://twitter.com/corradolanera)
 [`r fontawesome::fa("telegram")`](https://telegram.me/CorradoLanera)
 **@CorradoLanera** |
-[`r fontawesome::fa("calendar-check")` ](https://bit.ly/ortottica-ricevimento22) [**bit.ly/ortottica-ricevimento22**](https://bit.ly/ortottica-ricevimento22)
+[`r fontawesome::fa("calendar-check")` ](https://bit.ly/diagnostica22-ricevimento) [**bit.ly/diagnostica22-ricevimento**](https://bit.ly/diagnostica22-ricevimento)
 
 
