--- a/docs/02-descrittive.Rmd
+++ b/docs/02-descrittive.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Informatica, Statistica, e Fisica Applicata"
-subtitle: "Corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA"
+title: "BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA"
+subtitle: "Corso di laurea in TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA"
 author: "[CorradoLanera](www.CorradoLanera.it)"
 date: "YYYY-MM-DD (last update: `r Sys.Date()`)"
 institute: "[Unità di Biostatistica, Epidemiologia e Salute Pubblicah](https://www.unipd-ubep.it/) --- University of Padova"
@@ -75,14 +75,14 @@ style_share_again(
 ```{r meta, echo=FALSE}
 meta() %>%
   meta_general(
-    description = "Modulo di STATISTICA MEDICA del corso in INFORMATICA, STATISTICA, E FISICA APPLICATA per il corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA",
+    description = "Modulo di STATISTICA MEDICA del corso in BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA per il corso di laurea in TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA",
     generator = "xaringan and remark.js"
   ) %>% 
-  meta_name("github-repo" = "CorradoLanera/ORTOTTICA") %>% 
+  meta_name("github-repo" = "CorradoLanera/diagnostica22") %>% 
   meta_social(
-    title = "Informatica, Statistica, e Fisica Apllicata",
-    url = "https://corradolanera.github.io/ortottica/#1",
-    image = "https://github.com/CorradoLanera/ortottica/raw/main/docs/img/cover.jpg",
+    title = "BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA",
+    url = "https://corradolanera.github.io/diagnostica22/#1",
+    image = "https://github.com/CorradoLanera/diagnostica22/raw/main/docs/img/cover.jpg",
     og_type = "website",
     og_author = "UBEP",
     twitter_card_type = "summary",
@@ -163,14 +163,14 @@ style_duo_accent(
 <br>
 <br>
 
-# **INFORMATICA, STATISTICA, E FISICA APPLICATA**<br>**.orange[STATISTICA MEDICA]**
+# **BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA**<br>**.orange[STATISTICA MEDICA]**
 
 -- Analisi esplorativa e statistiche descrittive --
 
 <br>
 <br>
 
-C.d.L. **Ortottica e Assistenza Oftalmologica**
+C.d.L. **TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA**
 
 Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
@@ -399,9 +399,9 @@ class: inverse, middle
 
 ## .orange[Sondaggio]
 
-Per me: [ORTOTTICA22PRIMA](https://app.wooclap.com/events/ORTOTTICA22PRIMA/0)
+Per me: [DIAGNOSTICA22PRIMO](https://app.wooclap.com/events/DIAGNOSTICA22PRIMO/0)
 
-Per voi: [https://bit.ly/ortottica-primosondaggio22](https://bit.ly/ortottica-primosondaggio22)
+Per voi: [https://bit.ly/diagnostica22-sondaggio01](https://bit.ly/diagnostica22-sondaggio01)
 
 
 
@@ -859,9 +859,9 @@ class: inverse, middle
 
 ## .orange[Sondaggio]
 
-Per me: [ORTOTTICA22SECONDA](https://app.wooclap.com/events/ORTOTTICA22SECONDA/0)
+Per me: [DIAGNOSTICA22SECONDO](https://app.wooclap.com/events/DIAGNOSTICA22SECONDO/0)
 
-Per voi: [https://bit.ly/ortottica-secondosondaggio22](https://bit.ly/ortottica-secondosondaggio22)
+Per voi: [https://bit.ly/diagnostica22-sondaggio02](https://bit.ly/diagnostica22-sondaggio02)
 
 
 ---
@@ -1347,14 +1347,14 @@ class: middle, center, hide-count, inverse
 
 # .orange[link al _vostro_ cloud:]
 
-[https://bit.ly/ortottica-rscloud22](https://bit.ly/ortottica-rscloud22)
+[https://bit.ly/diagnostica22-rscloud](https://bit.ly/diagnostica22-rscloud)
 
 ---
 class: inverse
 
 # Risorse utili
 
-- [**RStudio Cloud**](https://bit.ly/ortottica-rscloud22): [https://bit.ly/ortottica-rscloud22](https://bit.ly/ortottica-rscloud22) gratis per voi per esplorare RStudio, le sue funzionalità, e allenarvi con R (link di iscrizione valido fino alla fine del corso). NOTA: a vostra scelta, è utilizzabile anche come _supporto_ durante l'esame.
+- [**RStudio Cloud**](https://bit.ly/diagnostica22-rscloud): [https://bit.ly/diagnostica22-rscloud](https://bit.ly/diagnostica22-rscloud) gratis per voi per esplorare RStudio, le sue funzionalità, e allenarvi con R (link di iscrizione valido fino alla fine del corso). NOTA: a vostra scelta, è utilizzabile anche come _supporto_ durante l'esame.
 
 - [**RStudio primers**](https://rstudio.cloud/learn/primers) ambiente gratuito dentro RStudio Cloud per l'apprendimento delle basi di analisi di dati con R tramite tutorial interattivi. Una volta registrati, oltre all'accesso al _nostro_ spazio di lavoro, avete accesso libero anche ai _Primers_.
 
@@ -1384,7 +1384,7 @@ _Mathematical conventions are just that, conventions. They differ by field of ma
 
 
 
-Diapositive: [https://bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
+Diapositive: [https://bit.ly/diagnostica22-slide](https://bit.ly/diagnostica22-slide)
 
 
 [`r fontawesome::fa("link")`](https://www.unipd-ubep.it/) [**www.unipd-ubep.it**](https://www.unipd-ubep.it/) | 
