--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Informatica, Statistica, e Fisica Applicata"
-subtitle: "Corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA"
+title: "BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA"
+subtitle: "Corso di laurea in TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA"
 author: "[CorradoLanera](www.CorradoLanera.it)"
 date: "YYYY-MM-DD (last update: `r Sys.Date()`)"
 institute: "[Unità di Biostatistica, Epidemiologia e Salute Pubblicah](https://www.unipd-ubep.it/) --- University of Padova"
@@ -73,14 +73,14 @@ style_share_again(
 ```{r meta, echo=FALSE}
 meta() %>%
   meta_general(
-    description = "Modulo di STATISTICA MEDICA del corso in INFORMATICA, STATISTICA, E FISICA APPLICATA per il corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA",
+    description = "Modulo di STATISTICA MEDICA del corso in BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA per il corso di laurea in TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA",
     generator = "xaringan and remark.js"
   ) %>% 
-  meta_name("github-repo" = "CorradoLanera/ORTOTTICA") %>% 
+  meta_name("github-repo" = "CorradoLanera/diagnostica22") %>% 
   meta_social(
-    title = "Informatica, Statistica, e Fisica Apllicata",
-    url = "bit.ly/ortottica-slide22",
-    image = "https://github.com/CorradoLanera/ortottica/raw/main/docs/img/cover.jpg",
+    title = "BASI DI DIAGNOSTICA PER IMMAGINI, INFORMATICA, FISICA E STATISTICA MEDICA",
+    url = "bit.ly/diagnostica22-slide",
+    image = "https://github.com/CorradoLanera/diagnostica22/raw/main/docs/img/cover.jpg",
     og_type = "website",
     og_author = "UBEP",
     twitter_card_type = "summary",
@@ -159,7 +159,7 @@ style_duo_accent(
 
 # **.orange[STATISTICA MEDICA]**
 
-C.d.L. **Ortottica e Assistenza Oftalmologica**
+C.d.L. **TECNICHE DI RADIOLOGIA MEDICA, PER IMMAGINI E RADIOTERAPIA**
 
 Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
@@ -167,17 +167,19 @@ Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
 **Giorno**    | **Tema**                 | **Diapositive**
 -------------:|:-------------------------|:--------------------
-2022/10/18    | Intro e info             | [Intro e info](00-intro_and_info.html)
-2022/10/18    | R e RStudio              | [R e RStudio](01-r_rstudio.html)
-2022/10/25    | Descrittive              | [Descrittive](02-descrittive.html)
-2022/11/08    | Probabilità              | [Probabilità](03-probabilita.html)
-2022/11/15    | Distribuzioni            | [Distribuzioni](04-distribuzioni.html)
-2022/11/22    | Inferenza, IC e p-value  | [IC e P-value](05-ic_p.html)
+2022/11/30    | Intro e info             | [Intro e info](00-intro_and_info.html)
+2022/11/30    | R e RStudio              | [R e RStudio](01-r_rstudio.html)
+2022/12/30    | Descrittive              | [Descrittive](02-descrittive.html)
+2022/12/01    | Descrittive              | 
+2022/12/01    | Probabilità              | 
+2022/12/06    | Probabilità              | 
+2022/12/07    | Distribuzioni            | 
+2022/12/14    | Inferenza, IC e p-value  | 
 
 </small>
 
 Corrado Lanera | [**Unità di Biostatistica, Epidemiologia e Salute Pubblica**](https://www.unipd-ubep.it/)
 
 [`r fontawesome::fa("envelope")`](mailto:Corrado.Lanera@ubep.unipd.it) [**Corrado.Lanera**__.orange[@ubep.unipd.it]__](mailto:Corrado.Lanera@ubep.unipd.it) | 
-[`r fontawesome::fa("calendar-check")` ](https://bit.ly/ortottica-ricevimento22) [**bit.ly/ortottica-ricevimento22**](https://bit.ly/ortottica-ricevimento22)
+[`r fontawesome::fa("calendar-check")` ](https://bit.ly/diagnostica22-ricevimento) [**bit.ly/diagnostica22-ricevimento**](https://bit.ly/diagnostica22-ricevimento)
 
