--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -171,7 +171,7 @@ Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 2022/11/30    | R e RStudio              | [R e RStudio](01-r_rstudio.html)
 2022/12/30    | Descrittive              | [Descrittive](02-descrittive.html)
 2022/12/01    | Descrittive              | 
-2022/12/01    | Probabilità              | 
+2022/12/01    | Probabilità              | [Probabilità](03-probabilita.html) 
 2022/12/06    | Probabilità              | 
 2022/12/07    | Distribuzioni            | 
 2022/12/14    | Inferenza, IC e p-value  | 
